DuPont DevSB/src/objects/pse__Vendor_Invoice_Item__c.object
<CustomObject>
    <customHelpPage>pse__VendorInvoiceItemHelp</customHelpPage>
    <description>The line item for a vendor invoice, calculated from the cost fields on timecards and milestones, and from reimbursement amounts on expenses.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Account_Currency__c</fullName>
        <formula>TEXT(pse__Vendor_Invoice__r.pse__Account__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Action_Recalc_Vendor_Currency_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Action: Recalc Vendor Currency Amount:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Amount__c</fullName>
        <description>The amount for this line item. This field is automatically populated from the respective related record: the Reimbursement Amount field from Expense, the Milestone Cost field from Milestone, the Amount field from Miscellaneous Adjustment, and Total Cost from Timecard Split.

NOTE: this field is not automatically updated if the fields on the related record change.</description>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Budget_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to the budget header that this item applies to. This field is required.</description>
        <label>Budget Header</label>
        <referenceTo>pse__Budget_Header__c</referenceTo>
        <relationshipLabel>Vendor Invoice Items</relationshipLabel>
        <relationshipName>Vendor_Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date of the invoice item. The value is populated by the New Invoice Items page from the respective field on the related record: Expense Date on Expense, Actual Date on Milestone, Effective Date on Misc. Adjustment, End Date on Timecard Split.</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense</label>
        <referenceTo>pse__Expense__c</referenceTo>
        <relationshipLabel>Vendor Invoice Items</relationshipLabel>
        <relationshipName>Vendor_Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Item_Exchange_Rate_Override__c</fullName>
        <description>Item-level vendor currency exchange rate override.  Is applied if and only if the above &quot;Override Item Exchange Rate&quot; checkbox is checked.  If not checked then this field value has no effect.  Note that this will be set as the relative rate between the Vendor currency and the Project currency.</description>
        <label>Item Exchange Rate Override</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Vendor Invoice Items</relationshipLabel>
        <relationshipName>Vendor_Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Miscellaneous_Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Miscellaneous Adjustment</label>
        <referenceTo>pse__Miscellaneous_Adjustment__c</referenceTo>
        <relationshipLabel>Vendor Invoice Items</relationshipLabel>
        <relationshipName>Vendor_Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Item_Exchange_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>May only be checked if parent Vendor Invoice has Apply Vendor Exchange Rate Override UN-checked (otherwise the rate would come from the parent Vendor Invoice).</description>
        <label>Override Item Exchange Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Project_Currency_Exchange_Rate__c</fullName>
        <description>This is the system exchange rate for the project currency (relative to the corporate currency)  It should be read only the page layout.  The field is auto populated by the system.</description>
        <label>Project Currency Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Vendor Invoice Items</relationshipLabel>
        <relationshipName>Vendor_Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Resource related to this item. Valid for Time Card Splits and Expenses.</description>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Vendor Invoice Items</relationshipLabel>
        <relationshipName>Vendor_Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Timecard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timecard</label>
        <referenceTo>pse__Timecard__c</referenceTo>
        <relationshipLabel>Vendor Invoice Items</relationshipLabel>
        <relationshipName>Vendor_Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Vendor_Currency_Amount_Number__c</fullName>
        <label>Vendor Currency Amount Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Vendor_Currency_Amount__c</fullName>
        <formula>pse__Vendor_Currency__c+&apos; &apos;+TEXT(pse__Vendor_Currency_Amount_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Currency Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Vendor_Currency_Exchange_Rate__c</fullName>
        <description>Vendor Currency Exchange Rate that is used to convert amount to Vendor currency.  This is always populated based on whichever rate is actually used - Project Currency Rate, Vendor Invoice Item override rate, or parent Vendor Invoice override rate.  This field is auto-populated by the system, and should be read only on the page layout.</description>
        <label>Vendor Currency Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Vendor_Currency__c</fullName>
        <formula>pse__Vendor_Invoice__r.pse__Vendor_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Vendor_Invoice_ER_Override_Applied__c</fullName>
        <formula>IF(pse__Vendor_Invoice__r.pse__Override_Vendor_Invoice_Exchange_Rate__c, $Label.pse__common_label_yes , $Label.pse__common_label_no)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Invoice ER Override Applied</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Vendor_Invoice__c</fullName>
        <label>Vendor Invoice</label>
        <referenceTo>pse__Vendor_Invoice__c</referenceTo>
        <relationshipLabel>Vendor Invoice Items</relationshipLabel>
        <relationshipName>Vendor_Invoice_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vendor Invoice Item</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INVITEM-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>pse__Amount_Calculation_Error</fullName>
        <active>true</active>
        <description>Verify Amount = Quantity * Unit Price if set.</description>
        <errorConditionFormula>AND(NOT(ISNULL( pse__Quantity__c )), NOT(ISNULL( pse__Unit_Price__c )),ABS(pse__Amount__c - (pse__Quantity__c*pse__Unit_Price__c))&gt;=0.01)</errorConditionFormula>
        <errorDisplayField>pse__Amount__c</errorDisplayField>
        <errorMessage>Amount field does not match Quantity times Unit Price</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Budget_Check_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LEN(pse__Budget_Header__c)&gt;0,NOT(OR(ISPICKVAL(pse__Budget_Header__r.pse__Type__c,&apos;Vendor Purchase Order&apos;), ISPICKVAL(pse__Budget_Header__r.pse__Type__c,&apos;Vendor Purchase Order Change Order&apos;))))</errorConditionFormula>
        <errorDisplayField>pse__Budget_Header__c</errorDisplayField>
        <errorMessage>Invoice items may only be applied to Budget Headers with the type Vendor Purchase Order or Vendor Purchase Order Change Order</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Budget_Currency_Mismatch</fullName>
        <active>false</active>
        <errorConditionFormula>AND(LEN(pse__Budget_Header__c)&gt;0,TEXT(CurrencyIsoCode) != TEXT(pse__Budget_Header__r.CurrencyIsoCode))</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Currency does not match the budget&apos;s currency</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Budget_Project_Mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LEN(pse__Budget_Header__c)&gt;0,pse__Budget_Header__r.pse__Project__c != pse__Project__c)</errorConditionFormula>
        <errorMessage>The budget&apos;s project must match the project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Budget_required_and_constant</fullName>
        <active>true</active>
        <errorConditionFormula>OR(LEN(pse__Budget_Header__c)=0,ISCHANGED(pse__Budget_Header__c))</errorConditionFormula>
        <errorMessage>Budget Header is required and cannot be changed once set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Invoice_Account_Mismatch</fullName>
        <active>false</active>
        <errorConditionFormula>pse__Project__r.pse__Account__c != pse__Vendor_Invoice__r.pse__Account__c</errorConditionFormula>
        <errorDisplayField>pse__Project__c</errorDisplayField>
        <errorMessage>The selected project&apos;s account must match the account of the Vendor Invoice</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Invoice_Currency_Mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LEN(pse__Vendor_Invoice__c)&gt;0,TEXT(CurrencyIsoCode) != TEXT(pse__Vendor_Invoice__r.CurrencyIsoCode))</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>The currency must match the currency of the Vendor Invoice</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Invoice_Override_in_Effect</fullName>
        <active>true</active>
        <description>Prevents checking the Override Currency Exchange rate check box on the item, if an invoice level override is in effect</description>
        <errorConditionFormula>AND(pse__Override_Item_Exchange_Rate__c,(pse__Vendor_Invoice_ER_Override_Applied__c = $Label.pse__common_label_yes))</errorConditionFormula>
        <errorMessage>Invoice Item Exchange Rate overrides are not permitted when an invoice level override is employed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Invoice_Submitted_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(pse__Vendor_Invoice__r.pse__Submitted__c,OR(ISCHANGED(pse__Amount__c),ISCHANGED(pse__Date__c)))</errorConditionFormula>
        <errorMessage>The Amount and Date fields cannot be changed for submitted vendor invoices</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Invoice_Submitted_No_New_Items</fullName>
        <active>true</active>
        <errorConditionFormula>AND(pse__Vendor_Invoice__r.pse__Submitted__c,ISNEW())</errorConditionFormula>
        <errorMessage>Cannot create new items for a submitted vendor invoice</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Project_is_constant</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISCHANGED(pse__Project__c),LEN(pse__Project__c)=0)</errorConditionFormula>
        <errorDisplayField>pse__Project__c</errorDisplayField>
        <errorMessage>Project is required and cannot be changed once set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Rate_Required_when_Overriding</fullName>
        <active>true</active>
        <description>Ensures that a rate is provided if the Override Currency Exchange Rate checkbox is checked.</description>
        <errorConditionFormula>AND(pse__Override_Item_Exchange_Rate__c =TRUE,
         OR(ISNULL(pse__Item_Exchange_Rate_Override__c) ,
               ISBLANK(pse__Item_Exchange_Rate_Override__c) 
             )
       )</errorConditionFormula>
        <errorDisplayField>pse__Item_Exchange_Rate_Override__c</errorDisplayField>
        <errorMessage>Item Exchange Rate Override must be supplied when checking the Override check box.</errorMessage>
    </validationRules>
</CustomObject>